k8s/base/services/librechat/librechat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librechat-api
  namespace: librechat
  labels:
    app: librechat-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librechat-api
  template:
    metadata:
      labels:
        app: librechat-api
    spec:
      containers:
        - name: librechat-api
          image: ghcr.io/danny-avila/librechat-dev-api:latest
          ports:
            - containerPort: 3080
          resources: {}
          volumeMounts:
            - name: config-volume
              mountPath: /app/librechat.yaml
              subPath: librechat.yaml
            - name: images-volume
              mountPath: /app/client/public/images
            - name: uploads-volume
              mountPath: /app/uploads
            - name: logs-volume
              mountPath: /app/api/logs
            # MCP
            - name: webdav-obsidian
              mountPath: /home/user/librechat/obsidian
            - name: webdav-files
              mountPath: /home/user/librechat/files
      volumes:
        - name: config-volume
          configMap:
            name: librechat-config
            items:
              - key: librechat.yaml
                path: librechat.yaml
        - name: images-volume
          persistentVolumeClaim:
            claimName: librechat-images
        - name: uploads-volume
          persistentVolumeClaim:
            claimName: librechat-uploads
        - name: logs-volume
          persistentVolumeClaim:
            claimName: librechat-logs
        - name: webdav-obsidian
          emptyDir: {}
        - name: webdav-files
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: librechat-api
  namespace: librechat
spec:
  selector:
    app: librechat-api
  ports:
    - protocol: TCP
      port: 3080
      targetPort: 3080
  type: ClusterIP
