k8s/base/services/librechat/librechat/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: librechat-ingress
  namespace: librechat
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`chat.loeffelmeister.de`)
      kind: Rule
      services:
        - name: librechat-api
          port: 3080
          scheme: http
